testsuite/poke.pkl/cast-diag-8.pk
/* { dg-do compile } */

fun foo = void: {}

var v = (foo) as int; /* { dg-error "" } */
